lustre/mdt/mdt_reint.c
@@ -962,7 +962,7 @@ relock:
 	if (!cos_incompat) {
 		rc = mdt_object_striped(info, mc);
 		if (rc < 0)
-			GOTO(unlock_parent, rc);
+			GOTO(put_child, rc);
 
 		cos_incompat = rc;
 		if (cos_incompat) {
